added logos and meta img in index.html

--- a/index.html
+++ b/index.html
@@ -3,18 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI HUB - Transform Your Business with Intelligent AI Solutions</title>
-    <meta name="description" content="Leading AI solutions provider offering AI agents, automations, chatbots, and voice agents. Transform your business with cutting-edge artificial intelligence technology." />
-    <meta name="author" content="AI HUB" />
 
+    <!-- Title shows in browser tab -->
+    <title>AI CHOWK - Transform Your Business with Intelligent AI Solutions</title>
+
+    <!-- Meta description shows in Google search -->
+    <meta name="description" content="Leading AI solutions provider offering AI agents, automations, chatbots, and voice agents. Transform your business with cutting-edge artificial intelligence technology." />
+    
+    <!-- Author -->
+    <meta name="author" content="AI CHOWK" />
+
+    <!-- Open Graph (Facebook, LinkedIn, WhatsApp) -->
     <meta property="og:title" content="AI HUB - Transform Your Business with Intelligent AI Solutions" />
     <meta property="og:description" content="Leading AI solutions provider offering AI agents, automations, chatbots, and voice agents. Transform your business with cutting-edge artificial intelligence technology." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.png" /> <!-- ✅ Put your logo/banner here (keep in public folder) -->
+    <meta property="og:url" content="https://yourdomain.com" /> <!-- ✅ Replace with your domain after purchase -->
 
+    <!-- Twitter (shows card preview when shared on Twitter/X) -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@aichowk" /> <!-- ✅ Replace with your real account -->
+    <meta name="twitter:creator" content="@aichowk" /> <!-- ✅ Replace with your real account -->
+    <meta name="twitter:title" content="AI HUB - Transform Your Business with Intelligent AI Solutions" />
+    <meta name="twitter:description" content="Leading AI solutions provider offering AI agents, automations, chatbots, and voice agents." />
+    <meta name="twitter:image" content="/og-image.png" /> <!-- ✅ Same image as OG -->
+
+    <!-- Favicon (browser tab icon) -->
+    <link rel="icon" type="image/png" href="/favicon.png" /> <!-- ✅ Add favicon.png in public folder -->
   </head>
 
   <body>
