changed name in some placed

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <meta name="twitter:image" content="/og-image.png" /> <!-- ✅ Same image as OG -->
 
     <!-- Favicon (browser tab icon) -->
-    <link rel="icon" type="image/png" href="/favicon.png" /> <!-- ✅ Add favicon.png in public folder -->
+    <link rel="icon" type="image/png" href="public/favicon.ico" /> <!-- ✅ Add favicon.png in public folder -->
   </head>
 
   <body>
